cmake_minimum_required(VERSION 3.8...3.19)

project(fesom2-benchmarks VERSION 1.0.0 LANGUAGES Fortran)

add_executable(oce_adv_tra_fct_loop_a1 oce_adv_tra_fct_loop_a1.F90)
add_executable(oce_adv_tra_fct_loop_a1_vlimit1 oce_adv_tra_fct_loop_a1_vlimit1.F90)
add_executable(oce_adv_tra_fct_loop_a2 oce_adv_tra_fct_loop_a2.F90)
add_executable(oce_adv_tra_fct_loop_b1_horizontal oce_adv_tra_fct_loop_b1_horizontal.F90)
